--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.12.2'
     // 网络模块
     implementation project(path: ':lib_network')
 
