--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     // exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.12.2'
