--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     // 网络模块
     implementation project(path: ':lib_network')
-
+    // 蓝牙通讯模块
+    implementation project(path: ':lib_bluetooth')
 }
