1.修复若干bug。2.新增暂停播放交互

--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -21,13 +21,14 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-<!--        <service-->
-<!--            android:name=".service.SocketService"-->
-<!--            android:exported="true"-->
-<!--            android:permission="android.permission.BIND_JOB_SERVICE" />-->
+        <!--        <service-->
+        <!--            android:name=".service.SocketService"-->
+        <!--            android:exported="true"-->
+        <!--            android:permission="android.permission.BIND_JOB_SERVICE" />-->
 
         <activity
             android:name=".ui.main.media.MediaPlayActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="landscape" />
         <activity
             android:name=".ui.login.LoginActivity"
