--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -21,11 +21,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <!--        <service-->
-        <!--            android:name=".service.SocketService"-->
-        <!--            android:exported="true"-->
-        <!--            android:permission="android.permission.BIND_JOB_SERVICE" />-->
-
+        <activity
+            android:name=".ui.setting.SettingActivity"
+            android:screenOrientation="landscape" />
+        <!-- <service -->
+        <!-- android:name=".service.SocketService" -->
+        <!-- android:exported="true" -->
+        <!-- android:permission="android.permission.BIND_JOB_SERVICE" /> -->
         <activity
             android:name=".ui.main.media.MediaPlayActivity"
             android:launchMode="singleTop"
