--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     testImplementation 'junit:junit:4.13'
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
     // blankJ
     implementation 'com.blankj:utilcodex:1.30.5'
     // 自定义RadioButton
