--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -14,12 +14,16 @@
     <application
         android:name=".MyApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher2_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+        <activity
+            android:name=".rtr.main.RtrMainActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.main.about.WebAboutActivity"
             android:screenOrientation="landscape"
@@ -27,8 +31,7 @@
         <activity
             android:name=".ui.setting.SettingActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme" />
-        <!-- <service -->
+            android:theme="@style/AppTheme" /> <!-- <service -->
         <!-- android:name=".service.SocketService" -->
         <!-- android:exported="true" -->
         <!-- android:permission="android.permission.BIND_JOB_SERVICE" /> -->
@@ -55,6 +58,7 @@
             android:name=".ui.main.MainActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme">
+
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
