--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // 调色板
+    implementation 'androidx.palette:palette:1.0.0'
     // exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.11.6'
     // eventBus
