调整底部item大小

--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
+            android:name=".rtr.media.RtrMediaPlayActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".rtr.main.RtrMainActivity"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme" />
