--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // lottie
+    implementation 'com.airbnb.android:lottie:3.5.0'
     // 调色板
     implementation 'androidx.palette:palette:1.0.0'
     // exoplayer
