修复了部分阴影和文字标题间距

--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         tools:targetApi="m">
         <activity
             android:name=".rtr.show.ShowActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme" />
         <activity
