通过GlideApp设置下载图片位置

--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
+
+        <meta-data
+            android:name="com.chinafocus.hvrskyworthvr.MyAppGlideModule"
+            android:value="AppGlideModule"/>
+
         <activity
             android:name=".rtr.show.ShowActivity"
             android:launchMode="singleTask"
