1.修复了在主页面点击播放视频后，瞬间滑动图片，从而导致item显示错误的bug。2.修复了在App高版本下载的时候，点击暂停，然后再断网，此时点击恢复后显示的bug。3.修复了检查新版本tag显示bug。4.修复了多次点击toast显示错误

--- a/hvrskyworthvr/src/main/AndroidManifest.xml
+++ b/hvrskyworthvr/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <meta-data
             android:name="com.chinafocus.hvrskyworthvr.MyAppGlideModule"
-            android:value="AppGlideModule"/>
+            android:value="AppGlideModule" />
 
         <activity
             android:name=".rtr.show.ShowActivity"
@@ -34,7 +34,13 @@
         <activity
             android:name=".rtr.mine.MineActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+            <!--            <intent-filter>-->
+            <!--                <action android:name="android.intent.action.MAIN" />-->
+
+            <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+            <!--            </intent-filter>-->
+        </activity>
         <activity
             android:name=".rtr.media.RtrMediaPlayActivity"
             android:launchMode="singleTop"
