--- a/hvrskyworthvr/build.gradle
+++ b/hvrskyworthvr/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.chinafocus.hvrskyworthvr"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 30
-        versionName "2.0.30"
+        versionCode 31
+        versionName "2.0.31"
 
         testInstrumentationRunner "androidx.sky_worth_login_logo.runner.AndroidJUnitRunner"
 
@@ -44,9 +44,10 @@ android {
                     if (outputFile != null && outputFile.name.endsWith('.apk')) {
                         if ("release" == variant.buildType.name) {
                             outputFileName = "hvrskyworthvr-release_pad_v${defaultConfig.versionName}_${defaultConfig.versionCode}.apk"
-                        } else if ("debug" == variant.buildType.name) {
-                            outputFileName = "hvrskyworthvr-debug_pad_v${defaultConfig.versionName}_${defaultConfig.versionCode}.apk"
                         }
+//                        else if ("debug" == variant.buildType.name) {
+//                            outputFileName = "hvrskyworthvr-debug_pad_v${defaultConfig.versionName}_${defaultConfig.versionCode}.apk"
+//                        }
                     }
                 }
             }
