--- a/skyworthvrwifi/build.gradle
+++ b/skyworthvrwifi/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     implementation(name: 'svr_plugin_android_interface', ext: 'aar')
     implementation(name: 'skybluetoothapi', ext: 'aar')
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
